<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_reactions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvReactionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_add_reaction"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
       android:id="@+id/layoutReactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReactionLabel">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnLikeReaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_like_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:icon="@drawable/ic_baseline_favorite_24"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnClapReaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/text_clap_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:icon="@drawable/ic_clapping"
            app:iconSize="24dp"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/tvReactionScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_score_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutReactions"/>



    <ImageView
        android:id="@+id/btnReduceScore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_remove_circle_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReactionScoreLabel"/>

    <TextView
        android:id="@+id/tvScoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_score_count"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReactionScoreLabel"/>


    <ImageView
        android:id="@+id/btnIncreaseScore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReactionScoreLabel"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnSaveReaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_save_reaction"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReduceScore"/>



</androidx.constraintlayout.widget.ConstraintLayout>